# cpp-algo-composite-cor

./: CMakeLists.txt
include/: attack_cal.h  attack_cor.h  base_creature.h
src/: attack_cal.cpp  attack_cor.cpp  base_creature.cpp  main.cpp
test/: test.cpp
