cmake_minimum_required(VERSION 3.10)
project(cpp-algo-composite-cor)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(compsor src/attack_cor.cpp src/base_creature.cpp src/attack_cal.cpp)
target_include_directories(compsor PUBLIC include)
# test
include(GoogleTest)
enable_testing()
add_subdirectory(dep/googletest)
add_executable(tests test/test.cpp)
target_link_libraries(tests compsor gtest gtest_main)
gtest_discover_tests(tests)
